[package]
name = "bestlend"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bestlend"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.23"
bytemuck = "1.14.3"
num_enum = "0.7.0"
rust_decimal = "=1.26.1"
rust_decimal_macros = "=1.26.1"
kamino_lending = { path = "../klend", features = ["cpi"] }
pyth-sdk-solana = "0.8.0"
